--- a/generator_templates/controller.mustache
+++ b/generator_templates/controller.mustache
@@ -5,7 +5,7 @@ import six
 
 {{#imports}}{{import}}  # noqa: E501
 {{/imports}}
-from logic.controller import Controller
+from pg_backup_api.logic.controller import Controller
 from pg_backup_api.{{packageName}} import util
 {{#operations}}
 {{#operation}}
