--- a/generator_templates/base_model_.mustache
+++ b/generator_templates/base_model_.mustache
@@ -3,15 +3,8 @@
 import pprint
 
 import six
-{{^supportPython2}}
-import typing
-{{/supportPython2}}
 
 from pg_backup_api.{{packageName}} import util
-{{^supportPython2}}
-
-T = typing.TypeVar('T')
-{{/supportPython2}}
 
 
 class Model(object):
@@ -24,7 +17,7 @@ class Model(object):
     attribute_map = {}
 
     @classmethod
-    def from_dict(cls{{^supportPython2}}: typing.Type[T]{{/supportPython2}}, dikt){{^supportPython2}} -> T{{/supportPython2}}:
+    def from_dict(cls, dikt):
         """Returns the dict as a model"""
         return util.deserialize_model(dikt, cls)
 
